--- a/init.grouper.rc
+++ b/init.grouper.rc
@@ -1,9 +1,11 @@
 import init.grouper.usb.rc
 
 on early-init
+    mount debugfs debugfs /sys/kernel/debug
+
+on init
     # Set init and its forked children's oom_adj.
     write /proc/1/oom_score_adj -1000
-
     mount debugfs debugfs /sys/kernel/debug
 
 on early-boot
@@ -15,6 +17,7 @@ on early-boot
 on fs
     setprop ro.crypto.umount_sd false
     mount_all /fstab.grouper
+    swapon_all /fstab.grouper
 
 on post-fs-data
     mkdir /data/media 0770 media_rw media_rw
@@ -293,6 +296,15 @@ on boot
     chown system system /proc/ektf_dbg  
     start touch_fw_update
 
+# initialize KSM
+    write /sys/kernel/mm/ksm/pages_to_scan 100
+    write /sys/kernel/mm/ksm/sleep_millisecs 500
+    write /sys/kernel/mm/ksm/run 1
+
+# config swap
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
+
 service wpa_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
@@ -363,12 +375,11 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
     oneshot
 
 #Sensor: load calibration files.
-    service sensors-config /system/bin/sensors-config
+service sensors-config /system/bin/sensors-config
     class main
     user root
     oneshot
 #Sensor load calibration files end
-
 
 # bugreport is triggered by the VOLUME-DOWN and VOLUME-UP keys
 service bugreport /system/bin/dumpstate -d -p -B \
@@ -420,5 +431,4 @@ service touch_fw_update /system/bin/touch_fw_update.sh
     user root
     group root
     oneshot
-
 
