--- a/init.grouper.rc
+++ b/init.grouper.rc
@@ -1,12 +1,13 @@
 import init.grouper.usb.rc
 
 on early-init
+    # Set init and its forked children's oom_adj.
+    write /proc/1/oom_score_adj -1000
+
     mount debugfs debugfs /sys/kernel/debug
 
 on init
-    # Set init and its forked children's oom_adj.
-    write /proc/1/oom_score_adj -1000
-    mount debugfs debugfs /sys/kernel/debug
+    symlink /sdcard /storage/sdcard0
 
 on early-boot
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
@@ -282,6 +283,14 @@ on boot
     chown system system /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq
     chmod 0660 /sys/devices/system/cpu/cpu3/cpufreq/scaling_max_freq
 
+# Double tap to wake settings
+    chown system system /sys/android_touch/doubletap_wake
+    chmod 0664 /sys/android_touch/doubletap_wake
+    chown system system /sys/android_touch/dt_delta_limit
+    chmod 0664 /sys/android_touch/dt_delta_limit
+    chown system system /sys/android_touch/dt_timeout
+    chmod 0664 /sys/android_touch/dt_timeout
+
 # Default Read Ahead value for sdcards
     write /sys/block/mmcblk0/queue/read_ahead_kb 2048
     write /sys/block/mmcblk1/queue/read_ahead_kb 2048
@@ -293,7 +302,7 @@ on boot
 
 # Touch
     chown system system /dev/elan-iap
-    chown system system /proc/ektf_dbg  
+    chown system system /proc/ektf_dbg
     start touch_fw_update
 
 # initialize KSM
@@ -319,9 +328,9 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     oneshot
 
 service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf \
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf -N \
-    -ip2p0 -Dnl80211 -c /data/misc/wifi/p2p_supplicant.conf \
+    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf \
     -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin \
     -g@android:wpa_wlan0
