--- a/init.grouper.rc
+++ b/init.grouper.rc
@@ -1,9 +1,6 @@
 import init.grouper.usb.rc
 
 on early-init
-    # Set init and its forked children's oom_adj.
-    write /proc/1/oom_score_adj -1000
-
     mount debugfs debugfs /sys/kernel/debug
 
 on init
@@ -18,11 +15,9 @@ on early-boot
 on fs
     setprop ro.crypto.umount_sd false
     mount_all /fstab.grouper
-    swapon_all /fstab.grouper
+#    swapon_all /fstab.grouper
 
 on post-fs-data
-    mkdir /data/media 0770 media_rw media_rw
-
     # change back to bluetooth from system
     chown bluetooth net_bt_stack /data/misc/bluetooth
 
@@ -292,8 +287,8 @@ on boot
     chmod 0664 /sys/android_touch/dt_timeout
 
 # Default Read Ahead value for sdcards
-    write /sys/block/mmcblk0/queue/read_ahead_kb 2048
-    write /sys/block/mmcblk1/queue/read_ahead_kb 2048
+    write /sys/block/mmcblk0/queue/read_ahead_kb 128
+    write /sys/block/mmcblk1/queue/read_ahead_kb 128
 
 # Load WiFi driver
 
@@ -306,6 +301,7 @@ on boot
     start touch_fw_update
 
 # initialize KSM
+    write /sys/kernel/mm/ksm/deferred_timer 1
     write /sys/kernel/mm/ksm/pages_to_scan 100
     write /sys/kernel/mm/ksm/sleep_millisecs 500
     write /sys/kernel/mm/ksm/run 1
@@ -313,6 +309,25 @@ on boot
 # config swap
     write /proc/sys/vm/page-cluster 0
     write /proc/sys/vm/swappiness 100
+
+# some additional performance tweaks (to be tested)
+	setprop dalvik.vm.heapgrowthlimit 128m
+	setprop dalvik.vm.heapsize 174m
+	write /sys/module/lowmemorykiller/parameters/adj "0,1,2,4,7,15"
+	write /sys/module/lowmemorykiller/parameters/minfree "8192,10240,12288,14336,16384,20480"
+	write /sys/module/lowmemorykiller/parameters/cost 48
+	write /proc/sys/vm/highmem_is_dirtyable 1
+	write /sys/block/mmcblk0/queue/nr_requests 512
+	write /sys/block/mmcblk0/queue/add_random 0
+	write /sys/block/mmcblk0/queue/rq_affinity 2
+	write /sys/block/mmcblk0/queue/iosched/slice_idle 0
+	write /sys/block/mmcblk0/queue/iosched/group_idle 10
+	write /sys/block/mmcblk0/queue/iosched/back_seek_penalty 1
+	write /sys/block/mmcblk0/queue/iosched/quantum 16
+	write /sys/block/mmcblk0/queue/iosched/slice_async_rq 4
+	write /sys/block/mmcblk0/queue/iosched/back_seek_max 2147483647
+	write /sys/devices/tegradc.0/smartdimmer/enable 0
+	write /sys/devices/host1x/gr3d/enable_3d_scaling 1
 
 service wpa_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
